fixed some more pagination mobile styling

--- a/css/foundation.css
+++ b/css/foundation.css
@@ -6462,9 +6462,9 @@ dd + dt {
   #blog-single .post-subhead {
     font-size: 1.375rem; }
   #blog-single #pagination > a {
-    height: 2em; }
+    height: 2.2em; }
     #blog-single #pagination > a:last-child {
-      margin-bottom: 1.6em; }
+      margin-bottom: 2.3em; }
   #blog-single .next, #blog-single .back, #blog-single .prev {
     margin-bottom: 1em; }
   #blog-single .next, #blog-single .back {
